<resources>
    <string name="app_name">NSS VAST</string>
    <string name="event">Event</string>
    <string name="attendance">Attendance</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="search">Search</string>
    <string name="hours">HOURS</string>
    <string name="unit">UNIT</string>
    <string name="dept">Dept:</string>
    <string name="contact">Contact:</string>
    <string name="cse">CSE</string>
    <string name="community">Community</string>
    <string name="camp">Camp</string>
    <string name="orientation">Orientation</string>
    <string name="campus">Campus</string>
    <string name="tl00xxxx0000">TL00XXXX0000</string>
    <string name="inShort">In Short</string>
    <string name="_10_digits">10 digits</string>
    <string name="register">Register</string>
    <string name="enrollment_number">Enrollment Number</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="developerName">Muhammed Hashim</string>
    <string name="about_developer">About Developer</string>
    <string-array name="category_array">
        <item>Choose Category</item>
        <item>Orientation</item>
        <item>Campus</item>
        <item>Community</item>
        <item>Camp</item>
    </string-array>
</resources>
